--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,7 +5,7 @@
     <div ng-show="root.twitterSession" class="container content-container">
       
         <!-- Left content: Who to follow, trends -->
-        <div class="left-result-container col-md-4 col-lg-3" ng-show="root.twitterSession">
+        <div class="left-result-container col-md-4 col-sm-12 col-lg-3" ng-show="root.twitterSession">
             
             <div class="switchers">
                 <div class="switch-to-map" ng-click="map.toggleMapAndTimeline();">
@@ -72,7 +72,7 @@
 
         </div>
         <!-- Center result + option filters -->
-        <div class="center-result-container col-md-6" ng-show="root.twitterSession">
+        <div class="center-result-container col-md-8 col-sm-12 col-lg-6" ng-show="root.twitterSession">
             <div class="row cms-view">
                 <div class="main-result-container">
                     <div class="statuses-container box-body chat" id="chat-box" style="width: auto;" infinite-scroll="root.loadMoreHomeFeed(15)">
