--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -447,6 +447,14 @@
 	    }
 	}
 
+	.animate-repeat.ng-enter-stagger,
+	.animate-repeat.ng-leave-stagger,
+	.animate-repeat.ng-move-stagger {
+	  /* 200ms will be applied between each sucessive enter operation */ 
+	  -webkit-transition-delay:2s;
+	  transition-delay:2s;
+	}
+
 	.animate-repeat.ng-enter,
 	.animate-repeat.ng-leave {
 	    -webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
@@ -454,11 +462,7 @@
 	    -ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
 	    -o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
 	    transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-	    position: relative;
-	    display: block;
-	    overflow: hidden;
-	    text-overflow: clip;
-	    white-space: nowrap;
+	    opacity:0;
 	}
 
 	.animate-repeat.ng-leave.ng-leave-active,
@@ -470,7 +474,7 @@
 	.animate-repeat.ng-enter.ng-enter-active,
 	.animate-repeat.ng-leave {
 	    opacity: 1;
-	    height: 200px;
+	    // height: 200px;
 	}
 
 	#wrapper {
