--- a/app/views/wall/display.html
+++ b/app/views/wall/display.html
@@ -28,7 +28,7 @@
     <div class="wall-container container-fluid">
         <div class="container content-container wall-body" ng-style="((wall.wallOptions.layoutStyle==2)&&(wall.statuses.length>0))?{'margin-left':'-5px'}:{}">
             <div ng-switch on="wall.wallOptions.layoutStyle" ng-show="wall.statuses.length>0" ng-class="wall.wallOptions.showStatistics?'col-md-8':'col-md-12'">
-                <div ng-switch-when="1" class="animate-repeat" ng-repeat="status in wall.statuses" linear open="wall.open" data="status"></div>
+                <div ng-switch-when="1" ng-animate ng-enter ng-enter-pending ng-repeat="status in wall.statuses" linear open="wall.open" data="status" class="animate-repeat"></div>
                 <div ng-switch-when="2" class="animate-repeat" ng-repeat="status in wall.statuses" card open="wall.open" data="status" leaderboardEnabled="{{wall.wallOptions.showStatistics}}"></div>
                 <div ng-switch-when="3" class="animate-repeat" ng-repeat="status in wall.statuses" coa open="wall.open" data="status"></div>
                 <div ng-switch-when="4">
