Fix banner alt, remove empty view glitch

--- a/app/views/analyze/analyze.html
+++ b/app/views/analyze/analyze.html
@@ -154,7 +154,7 @@ td
             <div class="col-md-3 padded ">
                 <div class="home-user-info no-top-margin">
                 <div class="blue-background-placeholder">
-                    <img ng-src="{{profilebanner}}" alt="user-banner-photo">    
+                    <img ng-src="{{profilebanner}}" s>    
                 </div>
                 <div class="home-user-info-content" style="width:268px;">
                     <div class="top-content">
