--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -827,6 +827,7 @@
 		padding-left: 0;
 		width: 100%;
 		border-radius: 6px;
+		padding-right: 0;
 		.home-user-trends {
 			margin-top: 0;
 			background: white;
