--- a/app/views/search.html
+++ b/app/views/search.html
@@ -43,7 +43,7 @@
             <!-- Left content: Who to follow, trends -->
             <div ng-show="!search.showMap" class="dashboard dashboard-left hidden-md col-lg-3">
                 <!-- Right content: Other statistics -->
-                <div class="right-result-container search-view-user-trends col-md-8 visible-lg">
+                <div class="search-view-user-trends col-md-8 visible-lg">
                     <div class="home-user-trends">
                         <h3 class="trend-title">Trends</h3>
                         <ul id="home-trend-list">
