Add link to a single tweet in map search

--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -719,6 +719,10 @@
 				.leaflet-top.leaflet-left, .leaflet-top.leaflet-right {
 					top: 52px;
 				}
+				.from-map-to-single-tweet {
+					margin-right: 5px;
+					text-decoration: none;
+				}
 			}
 		}
 	}
