Style fixes for linear layout and animations

--- a/app/styles/_wall.scss
+++ b/app/styles/_wall.scss
@@ -445,7 +445,7 @@
         max-width: 130px;
         float: left;
         border-radius: 6px;
-        margin-bottom: 20px;
+        // margin-bottom: 20px;
     }
     .linear-content {
         position: relative;
@@ -473,8 +473,8 @@
             }
         }
         .metadata {
-            position: absolute;
-            bottom: 0;
+            // position: absolute;
+            // bottom: 0;
             margin-top: 5px;
             font-size: 18px;
             color: #8899A6;
