--- a/app/views/wall/wallCreationModal.html
+++ b/app/views/wall/wallCreationModal.html
@@ -17,11 +17,8 @@
                     </div>
                     <div class="col-xs-offset-2 col-xs-10">
                         <div class="tab-content">
-                            <div class="tab-pane active" id="info">
+                            <div class="tab-pane active" id="info" style="margin-bottom: 100px;">
                                 <div>
-                                    <div class="box-header">
-                                        <h3 class="box-title">Just a few questions to get things started</h3>
-                                    </div>
                                     <form name="step1" role="form" class="wall-creation-form">
                                         <div class="box-body">
                                             <div class="form-group">
