Render results in topology view, add responsiveness to banner

--- a/app/styles/_topnav.scss
+++ b/app/styles/_topnav.scss
@@ -6,6 +6,7 @@
 		width: 100%;
 		top: 0;
 		left: 0;
+		border-bottom: 1px solid $search-grey-border;
 		> .topnav {
 			background: white;
 			height: 46px;
