Display list of sources that share the message when message is known by server
The sources are clickable & open a modal that let user view & share added sources.

--- a/app/styles/_data-connect.scss
+++ b/app/styles/_data-connect.scss
@@ -34,6 +34,9 @@
 	border-color: #d6e9c6;
 	color: #3c763d !important;
 }
+#my-connection-panel .alert-link {
+	cursor: pointer;
+}
 
 #datasource-table {
 	padding: 0 20px;
