--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -117,16 +117,12 @@
               </button>
               <ul class="fa dropdown-menu" aria-labelledby="dropdownMenu1" id="subDropDownMenu">
                 <li ng-repeat="loc in root.VariableLocations | limitTo:5"><a href="#" ng-click="root.setNewLocation($index)" class="fa">&#xf041; {{loc}}</a></li>
+                <li><a ng-bind="root.newLocationSet">&#xf041; </li>
                 <li role="separator" class="divider"></li>
+                <input type="text" class="form-content" ng-model="root.newLocationSet">
                 <li><a ng-click="root.clearLocation()">Disable Location</a></li>
               </ul>
 
-             <!--  <select class="fa dropdown-menu selectpicker" aria-labelledby="dropdownMenu1">
-                <option value="&#xf041; {{root.locationName}}">&#xf041; {{root.locationName}}</option>
-                <option ng-repeat="loc in root.VariableLocations | limitTo:5"><a href="#" ng-click="root.setNewLocation($index)" class="fa">&#xf041; {{loc}}</a></li>
-                <option role="separator" class="divider"></li>
-                <option><a ng-click="root.clearLocation()">Disable Location</a></li>
-              </select> -->
             </div>
             </span>
             <!-- Map Tile -->
@@ -171,11 +167,14 @@ var latitude;
 var longitude;
 
 $(document).click(function(){
- $("#subDropDownMenu").hide('slow'); 
+ $("#subDropDownMenu").hide('slow');
+ $("#subDropDownMenu").find('input').click(function(e){
+    e.stopPropagation(); 
+  });
  reActivate();
 });
 
-$("#subDropDownMenu").click(function(e){
+$("#subDropDownMenu").find('input').click(function(e){
   e.stopPropagation(); 
 });
 
@@ -251,6 +250,8 @@ $('#myModal').on('shown.bs.modal', function (e) {
   $("#CancelMap").hide();
   $("#largeTextAttachment").hide();
   $("#cancelLargeTextAttachment").hide();
+  $('#newLocation').hide();
+  $('#addNewLocation').hide();
 
   var popup = L.popup();
   var new_event_marker;
