--- a/app/views/data-connect/data-connect.html
+++ b/app/views/data-connect/data-connect.html
@@ -75,6 +75,30 @@
 				</div>
 			</div>
 		</li>
+		<div id="my-connection-panel">
+		<h1>Active Apps</h1> 
+		<div class="alert alert-success alert-dismissible" role="alert" ng-show="dataSourceMessages.success">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		</div>
+		<div class="alert alert-error alert-dismissible" role="alert" ng-show="dataSourceMessages.error">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		</div>
+		<hr/>
+		<ul id="datasource-table">
+		<div class="row">
+			<div class="col-lg-4"><i class="fa fa-angellist fa-4x"></i><h3>Angel List</h3></div>
+			<div class="buttonPanel pull-right">
+			<a href="https://angel.co/api/oauth/authorize?client_id=f148a48d308ee0ee11eb938a2f2f88bff24abb235412f596&response_type=code"><button class="btn btn-loklak-blue btn-lg">Add App</button></a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-4"><i class="fa fa-instagram fa-4x"></i><h3>Instagram</h3></div>
+			<div class="buttonPanel pull-right">
+			<a href="https://instagram.com/oauth/authorize/?client_id=a98ae74120464cf6a92f63ee9f4d90e9&response_type=token"><button class="btn btn-loklak-blue btn-lg">Add App</button></a>
+			</div>
+		</div>
+		</ul>
+	</div>
 		</ul><div id="single-data-map"></div>
 	<div add-connection-modal></div>
 	<div map-view-modal></div>
