--- a/app/views/home.html
+++ b/app/views/home.html
@@ -75,6 +75,7 @@
         <div class="center-result-container col-md-8 col-sm-12 col-lg-6" ng-show="root.twitterSession">
             <div class="row cms-view">
                 <div class="main-result-container">
+                    <button ng-show="root.timelineNewTweets.length > 0" class="timeline-more-result" ng-click="root.timelineShowNewerTweets();">Load {{root.timelineNewTweets.length}} new tweets!</button>
                     <div class="statuses-container box-body chat" id="chat-box" style="width: auto;" infinite-scroll="root.loadMoreHomeFeed(15)">
                         <div ng-repeat="status in root.twitterFriends.data | limitTo: root.homeFeedLimit" ng-attr-id="{{status.id}}" ng-click="map.openPopup(status.id);">
                             <div class="item" ng-click="toggleDetail($event)">
