--- a/app/views/wall/display.html
+++ b/app/views/wall/display.html
@@ -39,60 +39,72 @@
                 <h4>LEADERBOARD</h4>
                 <div class="row leaderboard-container">
                     <img class="histogram-loader" ng-hide="wall.topTwitterersData" src="images/loading.gif">
-                    <div class="col-xs-4">
-                        <!-- <canvas class="chart chart-pie" options="wall.topTwitterersOptions" labels="wall.topTwitterersLabels" data="wall.topTwitterersData"></canvas> -->
-                        <h4 ng-show="wall.topTwitterersData">Twitterers</h4>
-                        <table class="table leaderboard">
-                            <tbody>
-                                <tr class="leaderboard-item" ng-repeat="obj in wall.topTwitterersData">
-                                    <td>
-                                        <img ng-src="http://avatars.io/twitter/{{obj[0]}}" alt="">
-                                        <span ng-style="{'background-color': wall.wallOptions.headerColour, 'color': wall.wallOptions.headerForeColour}" class="label leaderboard-label">{{obj[1]}}</span>
-                                    </td>
-                                    <td class="leaderboard-text">
-                                        <a ng-href="{{'./search?q=from:' +  obj[0]}}" target="_blank">@{{obj[0]}}</a>
-                                    </td>
-                                    <!-- <td>
-                                                <div class="leaderboard-item">{{obj[1]}}</div>
-                                            </td> -->
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="col-xs-4">
-                        <!-- <canvas class="chart chart-pie" options="wall.topHashtagsOptions" labels="wall.topHashtagsLabels" data="wall.topHashtagsData"></canvas> -->
-                        <h4 ng-show="wall.topTwitterersData">Hashtags</h4>
-                        <table class="table">
-                            <tbody>
-                                <tr class="leaderboard-item" ng-repeat="obj in wall.topHashtagsData">
-                                    <td>
-                                        <div ng-style="{'background-color': wall.wallOptions.headerColour, 'color': wall.wallOptions.headerForeColour}" class="leaderboard-count">{{obj[1]}}</div>
-                                    </td>
-                                    <td class="leaderboard-text">
-                                        #{{obj[0]}}
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="col-xs-4">
-                        <!-- <canvas class="chart chart-pie" options="wall.topHashtagsOptions" labels="wall.topHashtagsLabels" data="wall.topHashtagsData"></canvas> -->
-                        <h4 ng-show="wall.topTwitterersData">Mentions</h4>
-                        <table class="table">
-                            <tbody>
-                                <tr class="leaderboard-item" ng-repeat="obj in wall.topMentionsData">
-                                    <td>
-                                        <div ng-style="{'background-color': wall.wallOptions.headerColour, 'color': wall.wallOptions.headerForeColour}" class="leaderboard-count">{{obj[1]}}</div>
-                                    </td>
-                                    <td class="leaderboard-text">
-                                        @{{obj[0]}}
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                    <div class="nav-tabs-custom" style="margin: 0 15px; width:33vw;">
+                        <ul class="nav nav-tabs">
+                            <li class="active" ng-style="getTabStyle(this)">
+                                <a data-toggle="tab" href="#tab-twitterers">Top Twitterers</a>
+                            </li>
+                            <li ng-style="getTabStyle(this)">
+                                <a data-toggle="tab" href="#tab-hashtags">Top Hashtags</a>
+                            </li>
+                            <li ng-style="getTabStyle(this)">
+                                <a data-toggle="tab" href="#tab-mentions">Top Mentions</a>
+                            </li>
+                        </ul>
+                        <div class="tab-content">
+                            <div class="tab-pane fade in active" id="tab-twitterers">
+                                <!-- <canvas class="chart chart-pie" options="wall.topTwitterersOptions" labels="wall.topTwitterersLabels" data="wall.topTwitterersData"></canvas> -->
+                                <table class="table leaderboard">
+                                    <tbody>
+                                        <tr class="leaderboard-item" ng-repeat="obj in wall.topTwitterersData">
+                                            <td style="width: 11vh;" style="width: 11vh;">
+                                                <img ng-src="http://avatars.io/twitter/{{obj[0]}}" alt="">
+                                                <span ng-style="{'background-color': wall.wallOptions.headerColour, 'color': wall.wallOptions.headerForeColour}" class="label leaderboard-label">{{obj[1]}}</span>
+                                            </td>
+                                            <td class="leaderboard-text">
+                                                <a ng-href="{{'./search?q=from:' +  obj[0]}}" target="_blank">@{{obj[0]}}</a>
+                                            </td>
+                                            <!-- <td>
+                                                                            <div class="leaderboard-item">{{obj[1]}}</div>
+                                                                        </td> -->
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="tab-pane fade" id="tab-hashtags">
+                                <!-- <canvas class="chart chart-pie" options="wall.topHashtagsOptions" labels="wall.topHashtagsLabels" data="wall.topHashtagsData"></canvas> -->
+                                <table class="table">
+                                    <tbody>
+                                        <tr class="leaderboard-item" ng-repeat="obj in wall.topHashtagsData">
+                                            <td style="width: 11vh;">
+                                                <div ng-style="{'background-color': wall.wallOptions.headerColour, 'color': wall.wallOptions.headerForeColour}" class="leaderboard-count">{{obj[1]}}</div>
+                                            </td>
+                                            <td class="leaderboard-text">
+                                                <a ng-href="{{'./search?q=#' +  obj[0]}}" target="_blank">#{{obj[0]}}</a>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="tab-pane fade" id="tab-mentions">
+                                <!-- <canvas class="chart chart-pie" options="wall.topHashtagsOptions" labels="wall.topHashtagsLabels" data="wall.topHashtagsData"></canvas> -->
+                                <table class="table">
+                                    <tbody>
+                                        <tr class="leaderboard-item" ng-repeat="obj in wall.topMentionsData">
+                                            <td style="width: 11vh;">
+                                                <div ng-style="{'background-color': wall.wallOptions.headerColour, 'color': wall.wallOptions.headerForeColour}" class="leaderboard-count">{{obj[1]}}</div>
+                                            </td>
+                                            <td class="leaderboard-text">
+                                                <a ng-href="{{'./search?q=@' +  obj[0]}}" target="_blank">@{{obj[0]}}</a>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="histogram-container">
+                <div class="histogram-container" ng-style="wall.wallOptions.headerPosition == 'Bottom'?{'bottom':'120px'}:{}">
                     <div class="row histogram-gradient"></div>
                     <div class="box box-default">
                         <div class="box-header with-border">
