--- a/app/styles/_wall.scss
+++ b/app/styles/_wall.scss
@@ -473,8 +473,8 @@
             }
         }
         .metadata {
-            // position: absolute;
-            // bottom: 0;
+            position: absolute;
+            bottom: 0;
             margin-top: 5px;
             font-size: 18px;
             color: #8899A6;
