--- a/app/views/wall/templates/linear.html
+++ b/app/views/wall/templates/linear.html
@@ -15,7 +15,7 @@
             </div>
         </div> -->
         <!-- Metadata -->
-        <div class="metadata col-xs-12">
+        <div class="metadata">
             <a class="name" ng-href="{{'./search?q=from:' + data.user.screen_name}}">{{data.user.name}}</a>
             <span class="screen-name">{{ "@" + data.user.screen_name}}</span>
             <span><i class="fa fa-twitter"></i></span> •
