--- a/app/styles/_wall.scss
+++ b/app/styles/_wall.scss
@@ -463,7 +463,7 @@
         .linear-content-text {
             word-break: keep-all;
             color: #292f33;
-            font-size: 26px;
+            font-size: 1.5vw;
             line-height: 120%;
             .linear-hashtag {
                 color: #55ACEE;
@@ -476,7 +476,7 @@
             position: absolute;
             bottom: 0;
             margin-top: 5px;
-            font-size: 18px;
+            font-size: 1.2vw;
             color: #8899A6;
             font-weight: normal;
             font-style: italic;
