--- a/app/styles/_wall.scss
+++ b/app/styles/_wall.scss
@@ -118,7 +118,7 @@
 
 .wall-modal-body {
     max-height: calc(100% - 140px);
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .mainhashtag-addon {
