Added URL from Api Settings

--- a/app/views/data-connect/data-connect.html
+++ b/app/views/data-connect/data-connect.html
@@ -94,7 +94,7 @@
 		<div class="row">
 			<div class="col-lg-4"><i class="fa fa-instagram fa-4x"></i><h3>Instagram</h3></div>
 			<div class="buttonPanel pull-right">
-			<a href="https://instagram.com/oauth/authorize/?client_id=a98ae74120464cf6a92f63ee9f4d90e9&redirect_uri=http://localhost:3000/instagram&response_type=token"><button class="btn btn-loklak-blue btn-lg">Add App</button></a>
+			<a ng-href="{{instaurl}}"><button class="btn btn-loklak-blue btn-lg">Add App</button></a>
 			</div>
 		</div>
 		</ul>
