--- a/app/views/wall/display.html
+++ b/app/views/wall/display.html
@@ -64,9 +64,6 @@
                                             <td class="leaderboard-text">
                                                 <a ng-href="{{'./search?q=from:' +  obj[0]}}" target="_blank">@{{obj[0]}}</a>
                                             </td>
-                                            <!-- <td>
-                                                                            <div class="leaderboard-item">{{obj[1]}}</div>
-                                                                        </td> -->
                                         </tr>
                                     </tbody>
                                 </table>
@@ -91,8 +88,9 @@
                                 <table class="table">
                                     <tbody>
                                         <tr class="leaderboard-item" ng-repeat="obj in wall.topMentionsData">
-                                            <td style="width: 11vh;">
-                                                <div ng-style="{'background-color': wall.wallOptions.headerColour, 'color': wall.wallOptions.headerForeColour}" class="leaderboard-count">{{obj[1]}}</div>
+                                            <td style="width: 11vh;" style="width: 11vh;">
+                                                <img ng-src="http://avatars.io/twitter/{{obj[0]}}" alt="">
+                                                <span ng-style="{'background-color': wall.wallOptions.headerColour, 'color': wall.wallOptions.headerForeColour}" class="label leaderboard-label">{{obj[1]}}</span>
                                             </td>
                                             <td class="leaderboard-text">
                                                 <a ng-href="{{'./search?q=@' +  obj[0]}}" target="_blank">@{{obj[0]}}</a>
