Home profile icon style strict height

--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -101,6 +101,7 @@
 			margin-left: 10px;
 			img {
 				width: 80px;
+				height: 80px;
 				display: inline-block;
 				vertical-align: top;
 				border: 4px solid white;
