--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,7 +2,7 @@
 <!-- Template for home view -->
 <div ng-show="!map.isShowingMapNotHome" class="content-wrapper home-view-content-wrapper">
     <!-- Main content -->
-    <div ng-show="root.twitterSession" class="container content-container">
+    <div ng-show="root.twitterSession && root.doneGettingFeed" class="container content-container">
       
         <!-- Left content: Who to follow, trends -->
         <div class="left-result-container col-md-4 col-sm-12 col-lg-3" ng-show="root.twitterSession">
