--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -122,6 +122,7 @@
 					margin-top: -5px;	
 					display: inline-block;
 					font-size: 13px;
+					color: rgb(51, 51, 51);
 				}
 				.twitter-api-user-location {
 					display: inline-block;
@@ -136,6 +137,7 @@
 					width: 160px;
 					box-sizing: border-box;
 					overflow: hidden;
+					color: rgb(51, 51, 51);
 				}
 			}
 		}
