--- a/app/views/account.html
+++ b/app/views/account.html
@@ -1,14 +1,14 @@
 
 <div ng-attr-id="{{data.id_str}}" class="home-user-info">
     <div class="blue-background-placeholder">
-        <img ng-src="{{data.profile_banner_url }}" alt="user-banner-photo" ng-show="data.profile_banner_url">    
+        <a ng-href="{{'./search?q=from:' + data.screen_name}}" ><img ng-src="{{data.profile_banner_url }}" alt="user-banner-photo" ng-show="data.profile_banner_url" fallback-src="/images/anon_400x400.png"></a>
     </div>
     <div class="home-user-info-content">
         <div class="top-content">
-            <img ng-src="{{data.profile_image_url_https | homePageImage }}">
+            <a ng-href="{{'./search?q=from:' + data.screen_name}}"><img fallback-src="/images/anon_200x200.png" ng-src="{{data.profile_image_url_https | homePageImage }}"></a>
             <div class="name-and-screen-name">
-                <span class="home-user-name">{{data.name | shortenTo:19  }}</span><br>
-                <span class="home-user-screen-name">@{{data.screen_name}}</span>
+                <a ng-href="{{'./search?q=from:' + data.screen_name}}" class="home-user-name">{{data.name | shortenTo:19  }}</a><br>
+                <a ng-href="{{'./search?q=from:' + data.screen_name}}" class="home-user-screen-name">@{{data.screen_name}}</a>
             </div>
         </div>
         <div class="bottom-content">
